--- a/packages/ui/src/components/Button.astro
+++ b/packages/ui/src/components/Button.astro
@@ -39,7 +39,7 @@
  *
  * ### Variants
  *
- * <div class="flex gap-3 items-center">
+ * <div class="flex flex-col items-start gap-8 sm:flex-row">
  *   <Button variant="default">Default</Button>
  *   <Button variant="secondary">Secondary</Button>
  *   <Button variant="outline">Outline</Button>
