--- a/apps/web/src/pages/components.astro
+++ b/apps/web/src/pages/components.astro
@@ -13,13 +13,13 @@ const components = docs.filter((doc) => doc.id.startsWith("components/"));
     Here you can find all the components available in the library.
   </p>
   <div class="not-content mt-10">
-    <ul class="list-none grid grid-cols-3 gap-4">
+    <ul class="list-none grid lg:grid-cols-3 gap-4">
       {
         components.map((component) => (
           <li>
             <a
               href={`/components/${component.id.replace("components/", "")}`}
-              class="inline-flex items-center gap-2 text-xl font-medium underline-offset-4 hover:underline md:text-base"
+              class="inline-flex items-center gap-2 lg:text-xl font-medium underline-offset-4 hover:underline md:text-base"
             >
               {component.data.title}
             </a>
