--- a/templates/monorepo-astro-with-docs/packages/ui/src/components/Button.astro
+++ b/templates/monorepo-astro-with-docs/packages/ui/src/components/Button.astro
@@ -86,8 +86,8 @@ import type { HTMLTag, Polymorphic } from "astro/types";
 import { cva } from "class-variance-authority";
 import { cn } from "@bejamas/ui/lib/utils";
 
-type Props<Tag extends HTMLTag> = Polymorphic<{
-  as: Tag;
+type Props = {
+  as?: HTMLTag;
   variant?:
     | "default"
     | "destructive"
