--- a/apps/web/src/pages/ui-demo.astro
+++ b/apps/web/src/pages/ui-demo.astro
@@ -29,7 +29,9 @@ import Dialog from "@bejamas/ui/components/Dialog.astro";
 ---
 
 <BlockExampleLayout theme="default">
-  <section class="max-w-7xl py-20 mx-auto px-5 grid grid-cols-12 gap-10">
+  <section
+    class="max-w-7xl py-20 mx-auto px-5 grid grid-cols-1 lg:grid-cols-12 gap-10"
+  >
     <div class="col-span-4 space-y-6">
       <h1 class="text-6xl font-medium leading-none">Aa</h1>
       <ButtonGroup>
