fix(starlight-theme): change button color to background

--- a/packages/starlight-theme-bejamas/src/styles/theme.css
+++ b/packages/starlight-theme-bejamas/src/styles/theme.css
@@ -511,6 +511,7 @@
     border: 0;
     color: var(--muted-foreground);
     padding-left: 0;
+    background-color: var(--background);
   }
 
   .sl-container {
