--- a/packages/ui/src/components/Alert.astro
+++ b/packages/ui/src/components/Alert.astro
@@ -4,7 +4,7 @@
  * @title Alert
  * @description Displays a callout for user attention.
  *
- * @example
+ * @preview
  *
  * <div class="grid w-full max-w-xl items-start gap-4">
  *   <Alert>
