--- a/packages/ui/src/components/Avatar.astro
+++ b/packages/ui/src/components/Avatar.astro
@@ -4,7 +4,7 @@
  * @title Avatar
  * @description An image element with a fallback for representing the user.
  *
- * @example
+ * @preview
  * <div class="flex flex-row flex-wrap items-center gap-12">
  *   <Avatar>
  *     <Avatar part="image">
