--- a/packages/ui/src/components/Breadcrumb.astro
+++ b/packages/ui/src/components/Breadcrumb.astro
@@ -4,7 +4,7 @@
  * @title Breadcrumb
  * @description Displays the path to the current resource using a hierarchy of links.
  *
- * @example
+ * @preview
  *
  * <Breadcrumb>
  *   <Breadcrumb part="list">
