--- a/packages/ui/src/components/Card.astro
+++ b/packages/ui/src/components/Card.astro
@@ -5,7 +5,7 @@
  * @description UI container for grouping content with header, footer, etc.
  * @figmaUrl https://www.figma.com/design/4SCvaPvZEhlTSiDyfAonrx/-1--Bejamas-UI---Design-System?node-id=54-1310
  *
- * @example
+ * @preview
  *
  * <Card class="w-full max-w-sm">
  *   <Card part="media" class="m-1">
@@ -199,7 +199,7 @@
  *       <div class="flex flex-col gap-6">
  *         <div class="grid gap-2">
  *           <Label for="email">Email</Label>
- *           <Input type="email" placeholder="m@example.com" required />
+ *           <Input type="email" placeholder="m@acme.com" required />
  *         </div>
  *         <div class="grid gap-2">
  *           <Label for="password">Password</Label>
