--- a/packages/ui/src/components/Item.astro
+++ b/packages/ui/src/components/Item.astro
@@ -4,7 +4,7 @@
  * @title Item
  * @description A versatile component that you can use to display any content.
  *
- * @example
+ * @preview
  *
  * <div class="flex w-full max-w-md flex-col gap-6">
  *   <Item variant="outline">
