--- a/packages/ui/src/components/LinkGroup.astro
+++ b/packages/ui/src/components/LinkGroup.astro
@@ -11,7 +11,7 @@
  * - list: list wrapper
  * - item: list item wrapper
  *
- * @example
+ * @preview
  *
  * <LinkGroup>
  *   <LinkGroup part="title">Company</LinkGroup>
