--- a/packages/ui/src/components/Select.astro
+++ b/packages/ui/src/components/Select.astro
@@ -4,7 +4,7 @@
  * @title Select
  * @description A styled dropdown based on the native HTML `<select>` element.
  *
- * @example
+ * @preview
  *
  * <div class="flex flex-col gap-2">
  *   <Label for="fruits">Your favorite fruit</Label>
