--- a/packages/ui/src/components/Button.astro
+++ b/packages/ui/src/components/Button.astro
@@ -4,7 +4,7 @@
  * @title Button
  * @description Displays a button or a component that looks like a button.
  *
- * @example
+ * @preview
  *
  * <div class="flex flex-wrap items-center gap-2 md:flex-row">
  *   <Button>Button</Button>
