--- a/packages/ui/src/components/Label.astro
+++ b/packages/ui/src/components/Label.astro
@@ -4,7 +4,7 @@
  * @title Label
  * @description Accessible and flexible label component with support for disabled states.
  *
- * @example
+ * @preview
  *
  * <div class="flex items-center space-x-2">
  *   <Checkbox id="terms" />
