--- a/packages/starlight-theme-bejamas/src/overrides/PageFrame.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/PageFrame.astro
@@ -104,7 +104,7 @@ const { template } = Astro.locals.starlightRoute.entry.data;
       inset-block: var(--sl-nav-height) 0;
       inset-inline-start: 0;
       width: 100%;
-      background-color: var(--sl-color-black);
+      background-color: var(--background);
       overflow-y: auto;
     }
 
