fix(docs): hide kudos on homepage

--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -46,6 +46,10 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     @apply text-3xl font-medium text-left text-balance block max-w-xl leading-[1.15];
   }
 
+  .kudos {
+    display: none;
+  }
+
   @media (min-width: 50rem) {
     .hero h1 {
       @apply text-5xl;
