--- a/packages/ui/src/components/Breadcrumb.astro
+++ b/packages/ui/src/components/Breadcrumb.astro
@@ -2,7 +2,7 @@
 /**
  * @component Breadcrumb
  * @title Breadcrumb
- * @description Displays the path to the current resource using a hierarchy of links.
+ * @description A navigation path showing the user's location in the site hierarchy with links to parent pages.
  *
  * @preview
  *
