--- a/packages/ui/src/components/ButtonGroup.astro
+++ b/packages/ui/src/components/ButtonGroup.astro
@@ -2,7 +2,7 @@
 /**
  * @component ButtonGroup
  * @title Button Group
- * @description Groups buttons (and compatible triggers) with shared rounded borders and orientation.
+ * @description A set of related buttons grouped together, with support for horizontal or vertical layouts.
  *
  * @preview
  *
