--- a/packages/ui/src/components/Item.astro
+++ b/packages/ui/src/components/Item.astro
@@ -2,7 +2,7 @@
 /**
  * @component Item
  * @title Item
- * @description A versatile component that you can use to display any content.
+ * @description A versatile component for displaying any content, combining elements like title, description, media, and actions.
  *
  * @preview
  *
