--- a/packages/ui/src/components/Label.astro
+++ b/packages/ui/src/components/Label.astro
@@ -2,7 +2,7 @@
 /**
  * @component Label
  * @title Label
- * @description Accessible and flexible label component with support for disabled states.
+ * @description A text label for form controls.
  *
  * @preview
  *
