--- a/packages/ui/src/components/RadioGroup.astro
+++ b/packages/ui/src/components/RadioGroup.astro
@@ -2,7 +2,7 @@
 /**
  * @component RadioGroup
  * @title Radio Group
- * @description Single-file RadioGroup with multi-part API, using native radios (no JS).
+ * @description A group of options where users can select exactly one choice.
  *
  * @preview
  *
