--- a/packages/ui/src/components/Avatar.astro
+++ b/packages/ui/src/components/Avatar.astro
@@ -2,7 +2,7 @@
 /**
  * @component Avatar
  * @title Avatar
- * @description An image element with a fallback for representing the user.
+ * @description An image representing a user or entity, with fallback support when unavailable.
  *
  * @preview
  * <div class="flex flex-row flex-wrap items-center gap-12">
