docs(ui): add figma url

--- a/packages/ui/src/components/Accordion.astro
+++ b/packages/ui/src/components/Accordion.astro
@@ -3,6 +3,7 @@
  * @component Accordion
  * @title Accordion
  * @description Vertically stacked collapsible sections that let users show and hide content panels by clicking headings. Built on native `<details>`/`<summary>`.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/BejamasUI---Design-System?node-id=2589-14086&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  *
