--- a/packages/ui/src/components/Avatar.astro
+++ b/packages/ui/src/components/Avatar.astro
@@ -3,6 +3,7 @@
  * @component Avatar
  * @title Avatar
  * @description An image representing a user or entity, with fallback support when unavailable.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/BejamasUI---Design-System?node-id=2531-2620&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  * <div class="flex flex-row flex-wrap items-center gap-12">
