--- a/packages/ui/src/components/Card.astro
+++ b/packages/ui/src/components/Card.astro
@@ -3,7 +3,7 @@
  * @component Card
  * @title Card
  * @description UI container for grouping content with header, footer, etc.
- * @figmaUrl https://www.figma.com/design/4SCvaPvZEhlTSiDyfAonrx/-1--Bejamas-UI---Design-System?node-id=54-1310
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2543-3884&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  *
