--- a/packages/ui/src/components/Date.astro
+++ b/packages/ui/src/components/Date.astro
@@ -2,6 +2,7 @@
 /**
  * @component Date
  * @description Formats and displays dates and times in human-readable styles.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2527-2986&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  *
