--- a/packages/ui/src/components/Dialog.astro
+++ b/packages/ui/src/components/Dialog.astro
@@ -3,6 +3,7 @@
  * @component Dialog
  * @title Dialog
  * @description An accessible modal window for focused content or user actions. Built on native `<dialog>` element with open/close logic.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2543-9384&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  *
