--- a/packages/ui/src/components/Dropdown.astro
+++ b/packages/ui/src/components/Dropdown.astro
@@ -3,6 +3,7 @@
  * @component Dropdown
  * @title Dropdown
  * @description A toggleable menu displaying a list of options or actions.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2529-2338&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  * <Dropdown>
