--- a/packages/ui/src/components/InputGroup.astro
+++ b/packages/ui/src/components/InputGroup.astro
@@ -3,6 +3,7 @@
  * @component InputGroup
  * @title Input Group
  * @description An input field with attached addons like icons, buttons, or text labels.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2549-20918&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  *
