--- a/packages/ui/src/components/Item.astro
+++ b/packages/ui/src/components/Item.astro
@@ -3,6 +3,7 @@
  * @component Item
  * @title Item
  * @description A versatile component for displaying any content, combining elements like title, description, media, and actions.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2525-7378&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  *
