--- a/packages/ui/src/components/Label.astro
+++ b/packages/ui/src/components/Label.astro
@@ -3,6 +3,7 @@
  * @component Label
  * @title Label
  * @description A text label for form controls.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2523-1293&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  *
