--- a/packages/ui/src/components/Select.astro
+++ b/packages/ui/src/components/Select.astro
@@ -3,6 +3,7 @@
  * @component Select
  * @title Select
  * @description A dropdown for selecting one option from a list, with support for grouping and placeholders. Built on native `<select>` element.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2526-677&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  *
