--- a/packages/ui/src/components/Separator.astro
+++ b/packages/ui/src/components/Separator.astro
@@ -4,6 +4,7 @@
  * @title Separator
  * @description Visual separator for grouping content, supporting horizontal and vertical orientation.
  * @status stable
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2511-5829&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  * <div>
