--- a/packages/ui/src/components/Badge.astro
+++ b/packages/ui/src/components/Badge.astro
@@ -2,6 +2,7 @@
 /**
  * @component Badge
  * @description A small label for status, categories, or counts.
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2537-3522&t=YFStJ3V8fXEO8QD8-4
  *
  * @preview
  *
