--- a/packages/ui/src/components/LinkGroup.astro
+++ b/packages/ui/src/components/LinkGroup.astro
@@ -4,6 +4,7 @@
  * @title Link Group
  * @description A group of related links with optional title for navigation or footer sections.
  * @status stable
+ * @figmaUrl https://www.figma.com/design/koxai7zw5vIuBzuVxe5T2l/bejamas-ui?node-id=2166-6001&t=YFStJ3V8fXEO8QD8-4
  *
  * Parts:
  * - root (default): wrapper container
